# diffwita

./: Cargo.toml  README.md
src/: annotations.rs  git.rs  lib.rs  main.rs  markers.rs  parse.rs  patchset.rs  section.rs
static/: style.css
templates/: base.tera  index.tera
