[package]
name = "diffguide" # diffwita
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.23",  features = ["serde"] }
markdown-it = "0.4.0"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
unidiff = "0.3.3"

[profile.dev.package."*"]
opt-level = 3
